# OrganizationAPI

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 30bbe6ce3a9a_change_remode_side_in_department_model.py  34f77864cbde_change_self_referncing_relationship_in_.py  3a07b869afd6_add_default_ordering_by_full_name_for_.py  459cdb4b9b6c_add_loading_strategy_for_self_.py  4dcf8d673b00_add_casacde_delition_param_on_.py  8940d3e7f4f4_add_default_ordering_for_employee_.py  b6aa560e7b5a_add_loading_strategy_for_department_.py  cf5c93480de1_remove_default_ordering_for_employee_.py  d0feee6cd0f4_change_fk_reference_between_department_.py  d2848ebb6b5e_change_backref_to_back_popualtes_in_.py  dddc09db609e_create_department_and_employee_models.py
src/organization_api/: config.py  exceptions.py  logger_config.py  main.py  models.py  services.py  validators.py  web.py
src/organization_api/data/: db_connection.py  repositories.py  seed_db.py  sql_models.py
src/organization_api/data/fixtures/: departments.json  employees.json
tests/: conftest.py  test_data.py  test_unit.py
tests/test_integration/: test_data.py  test_services.py  test_validators.py  test_web.py
